# backpack

./: .conda_env.yml  .coveragerc  .darglint  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pydocstyle  .readthedocs.yml  .travis.yml  LICENSE  LICENSE.txt  README-dev.md  README.md  README.org  README.rst  black.toml  changelog.md  fully_documented.txt  makefile  pre-commit  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_dev.txt  requirements_exp.txt  setup.cfg  setup.py  test_batch_norm_compare.py  test_diag_h_mc.py
.github/workflows/: flake8.yaml  lint.yaml  python-publish.yml  test.yaml
backpack/: __init__.py  backpropextension.py  branching.py  context.py  curvature.py  extensions.py  matbackprop.py  moduleextension.py  newbackpropextension.py  utils.py
backpack/curvmatprod/: activations.py  cmpbase.py  conv2d.py  dropout.py  linear.py  losses.py  padding.py  pooling.py
backpack/custom_module/: __init__.py  branching.py  graph_utils.py  pad.py  permute.py  reduce_tuple.py  scale_module.py  slicing.py
backpack/extensions/: __init__.py  backprop_extension.py  curvature.py  mat_to_mat_jac_base.py  module_extension.py  newmatbackprop.py  saved_quantities.py
backpack/firstorder/: __init__.py
backpack/gradient/: ctxinteract.py
backpack/hessianfree/: __init__.py  ggnvp.py  hvp.py  lop.py  rop.py  utils.py
backpack/layers/: __init__.py
backpack/new_extensions/: __init__.py  firstorder.py  module_extension.py
backpack/optim/: __init__.py  conjugate_gradient.py  curvature_wrapper.py  diagggn_curvature_wrapper.py  fancy_damping.py  kfac_curvature_wrapper.py
backpack/secondorder/: ea.py  strategies.py  utils.py
backpack/utils/: __init__.py  cleanup.py  conv.py  conv_transpose.py  convert_parameters.py  ein.py  einsum.py  errors.py  examples.py  hooks.py  kroneckers.py  linear.py  module_classification.py  subsampling.py  unsqueeze.py  utils.py
benchmarks/: bench_batch_gradients.py  helpers.py
bpexts/: __init__.py  decorator.py  decorator_test.py  utils.py  utils_test.py
bpexts/cvp/: conv2d.py  crossentropy.py  flatten.py  linear.py  maxpool2d.py  nonlinear.py  padding.py  relu.py  reshape.py  sequential.py  sigmoid.py  tanh.py  view.py
bpexts/gradient/: __init__.py  approx.py  backpropextension.py  config.py  context.py  conv2d.py  conv2d_test.py  crossentropyloss.py  extensions.py  linear.py  linear_test.py  matbackprop.py  relu.py  sigmoid.py  utils.py
bpexts/hbp/: __init__.py  combined.py  combined_net_test.py  combined_relu.py  combined_relu_test.py  combined_sigmoid.py  combined_sigmoid_test.py  combined_test.py  conv2d.py  conv2d_net_test.py  conv2d_net_with_activation_test.py  conv2d_recursive.py  conv2d_recursive_test.py  conv2d_test.py  flatten.py  hbp_test.py  linear.py  linear2.py  linear_net_test.py  linear_test.py  loss.py  loss_test.py  maxpool2d.py  maxpool2d_recursive.py  maxpool2d_recursive_test.py  module.py  module_test.py  nonlinear.py  parallel.py  parallel_converter.py  parallel_converter_test.py  relu.py  relu_test.py  reshape.py  reshape_test.py  sequential.py  sequential_test.py  shared_linear.py  shared_linear_test.py  (+7 more)
bugs/: bug0.py
doc/: Makefile  update_doc.sh
docs/: CNAME  examples.html  index.html
docs_src/: .gitignore  Makefile  README.md  buildweb.sh  conf.py  index.rst  make.bat
examples/: example_1_variance.py  example_2_diag_ggn_optimizer.py  example_all_in_one.py  example_cnn_all_in_one.py  example_diag_ggn_exact.py  example_diag_ggn_mc.py  example_diag_ggn_optimizer.py  example_diag_hessian.py  example_ggn_matrix.py  example_ggn_vector_product.py  example_grad.py  example_grad_2nd_moment.py  example_grad_l2.py  example_grad_var.py  example_helper.py  example_hessian_matrix.py  example_hessian_vector_product.py  example_indiv_grads.py  example_indiv_grads_arbitrary_ops.py  example_kfac.py  example_kflr.py  example_kfra.py  models.py  run_examples.py  unfold.py  utils.py  vgg_as_sequential.py
exp/: __init__.py  bench_batch_gradients.py  bench_helpers.py  bench_sum_grad_squared.py  enable_import_bpexts.py  exp01_chen2018_fig1_mnist.py  exp01_chen2018_fig2_cifar10.py  exp02_chen2018_splitting_cifar10.py  exp02_chen2018_splitting_mnist.py  exp03_c1d1_hessian.py  exp04_fcnn_hessian.py  exp05_c1d1_optimization.py  exp06_c6d3_optimization.py  exp06_c6d3_optimization_cvp.py  exp07_c2d2_optimization.py  exp07_c2d2_optimization_cvp.py  exp07_c2d2_optimization_sgd.py  exp08_c4d3_optimization_adam.py  exp08_c4d3_optimization_cvp.py  exp08_c4d3_optimization_sgd.py  fig_exp01_chen2018_fig1_mnist.py  fig_exp01_chen2018_fig2_cifar10.py  fig_exp02_chen2018_splitting_cifar10.py  fig_exp02_chen2018_splitting_mnist.py  fig_exp05_c1d1_optimization.py  fig_exp08_c4d3_optimization.py  load_cifar10.py  load_cifar10_test.py  load_dataset.py  load_mnist.py  load_mnist_test.py  models_chen2018.py  models_chen2018_test.py  training.py  training_test.py  utils.py
masterThesis/: demo_felix.py  demo_rnn.py  rnn_mem_test.py  test_mem_rnn.py
requirements/: docs.txt  lint.txt  test.txt
test/: __init__.py  automated_bn_test.py  automated_kfac_test.py  automated_test.py  automatic_derivatives.py  automatic_extensions.py  benchmarks.py  bugfixes_test.py  conv2d_test.py  interface_test.py  jacobian_benchmarks.py  layers.py  layers_test.py  linear_test.py  make_problems.py  networks.py  problems.py  pytest.ini  readme.md  test___init__.py  test_autograd.py  test_automatic_support.py  test_batch_first.py  test_bias_jac_t_mat_prod.py  test_branching.py  test_ea_jac_t_mat_jac_prod.py  test_kfac_bn.py  test_problem.py  test_problems_activations.py  test_problems_bn.py  test_problems_convolutions.py  test_problems_kfacs.py  test_problems_linear.py  test_problems_padding.py  test_problems_pooling.py  test_retain_graph.py  test_second_order_warnings.py  test_simple_resnet.py  test_sqrt_hessian.py  test_sqrt_hessian_sampled.py  (+3 more)
tests/: automated_test.py  conv2d_test.py  decorator_test.py  interface_test.py  jacobian_benchmarks.py  test_problem.py  test_problems_convolutions.py  test_problems_pooling.py
(+976 files in other folders)
